Mas cambios de testing

--- a/03-curso-react/babel.config.json
+++ b/03-curso-react/babel.config.json
@@ -4,7 +4,15 @@
         "@babel/preset-env",
         {
           "targets": {
-            "node": "current"
+            "esmodules": "true"
+          }
+        }
+      ],
+      [
+        "@babel/preset-react",
+        {
+          "runtime": {
+            "automatic": "true"
           }
         }
       ]
