--- a/03-curso-react/package.json
+++ b/03-curso-react/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.1.2",
     "@types/react": "^18.0.17",
